tests/algorithms/x/C/bit_manipulation/binary_twos_complement.error
compile: exit status 1
/workspace/mochi/tests/algorithms/x/C/bit_manipulation/binary_twos_complement.c: In function ‘twos_complement’:
/workspace/mochi/tests/algorithms/x/C/bit_manipulation/binary_twos_complement.c:110:62: error: ‘to_binary_len’ undeclared (first use in this function); did you mean ‘to_binary’?
  110 |     long long binary_number_length = (to_binary(abs_number), to_binary_len);
      |                                                              ^~~~~~~~~~~~~
      |                                                              to_binary
/workspace/mochi/tests/algorithms/x/C/bit_manipulation/binary_twos_complement.c:110:62: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/algorithms/x/C/bit_manipulation/binary_twos_complement.c:116:77: warning: passing argument 1 of ‘str_int’ makes integer from pointer without a cast [-Wint-conversion]
  116 |     const char* twos_complement_number = str_concat(str_concat("1", str_int(padding)), str_int(complement_binary));
      |                                                                             ^~~~~~~
      |                                                                             |
      |                                                                             const char *
/workspace/mochi/tests/algorithms/x/C/bit_manipulation/binary_twos_complement.c:20:32: note: expected ‘long long int’ but argument is of type ‘const char *’
   20 | static char* str_int(long long v) {
      |                      ~~~~~~~~~~^
/workspace/mochi/tests/algorithms/x/C/bit_manipulation/binary_twos_complement.c:116:96: warning: passing argument 1 of ‘str_int’ makes integer from pointer without a cast [-Wint-conversion]
  116 |     const char* twos_complement_number = str_concat(str_concat("1", str_int(padding)), str_int(complement_binary));
      |                                                                                                ^~~~~~~~~~~~~~~~~
      |                                                                                                |
      |                                                                                                const char *
/workspace/mochi/tests/algorithms/x/C/bit_manipulation/binary_twos_complement.c:20:32: note: expected ‘long long int’ but argument is of type ‘const char *’
   20 | static char* str_int(long long v) {
      |                      ~~~~~~~~~~^
