tests/algorithms/x/C/bit_manipulation/binary_twos_complement.c
// Generated by Mochi 0.10.32 on 2025-08-06 20:15 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>


static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

const char* repeat_char(const char* ch, long long times);
const char* to_binary(long long n);
long long pow2(long long exp);
const char* twos_complement(long long number);
int main(void);

const char* repeat_char(const char* ch, long long times) {
    const char* res = "";
    long long i = 0LL;
    while (i < times) {
        res = str_concat(res, ch);
        i = i + 1LL;
    }
    return res;
}

const char* to_binary(long long n) {
    if (n == 0LL) {
        return "0";
    }
    const char* res = "";
    long long v = n;
    while (v > 0LL) {
        res = str_concat(str_int(v % 2LL), res);
        v = v / 2LL;
    }
    return res;
}

long long pow2(long long exp) {
    long long res = 1LL;
    long long i = 0LL;
    while (i < exp) {
        res = res * 2LL;
        i = i + 1LL;
    }
    return res;
}

const char* twos_complement(long long number) {
    if (number > 0LL) {
        panic("input must be a negative integer");
    }
    if (number == 0LL) {
        return "0b0";
    }
    long long abs_number = (number < 0LL ? -(number) : number);
    long long binary_number_length = (to_binary(abs_number), to_binary_len);
    long long complement_value = pow2(binary_number_length) - abs_number;
    const char *complement_binary = to_binary(complement_value);
    size_t complement_binary_len = complement_binary ? strlen(complement_binary) : 0;
    const char *padding = repeat_char("0", binary_number_length - complement_binary_len);
    size_t padding_len = padding ? strlen(padding) : 0;
    const char* twos_complement_number = str_concat(str_concat("1", str_int(padding)), str_int(complement_binary));
    return str_concat("0b", twos_complement_number);
}

int main(void) {
    {
        long long __start = _now();
        puts(twos_complement(0LL));
        puts(twos_complement(-1LL));
        puts(twos_complement(-5LL));
        puts(twos_complement(-17LL));
        puts(twos_complement(-207LL));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
